# wayfinder

./: CHANGELOG.md  Cargo.toml  README.md
data/: org.freedesktop.impl.portal.desktop.wayfinder.service  wayfinder.portal
data/actions/: extract-here-bsdtar.desktop
src/: lib.rs  main.rs
src/actions/: mod.rs
src/clipboard/: mod.rs
src/context_menu/: mod.rs
src/file_model/: mod.rs
src/portal/: chooser.rs  dbus.rs  main.rs
src/properties/: mod.rs
src/search/: mod.rs
src/shortcuts/: mod.rs
src/sidebar/: mod.rs
src/views/list_view/: imp.rs
src/window/: imp.rs  mod.rs
